<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home_bottom"
        android:icon="@drawable/ic_home_foreground"
        android:title="Home" />
    <item
        android:id="@+id/nav_profile_bottom"
        android:icon="@drawable/ic_profile_foreground"
        android:title="Profile" />
    <item
        android:id="@+id/nav_organizer_bottom"
        android:icon="@drawable/ic_organizer_foreground"
        android:title="organizer" />

<!--    <item-->
<!--        android:id="@+id/nav_admin"-->
<!--        android:icon="@drawable/ic_admin_foreground"-->
<!--        android:title="Admin" />-->


</menu>